<resources>
    <string name="app_name">AccountsMgr</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="reenter_password">Re-enter password:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="email">Email:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="usernameRequired">Username field is required</string>
    <string name="passwordRequired">Password field is required</string>
    <string name="reenterPasswordRequired">Re-enter password field is required</string>
    <string name="usernameExists">Username already exists</string>
    <string name="passwordsDontMatch">Password and Re-entered password do not match</string>
    <string name="registerSuccessful">Registered successfully</string>
    <string name="userDoesNotExist">Username does not exist</string>
    <string name="incorrectPassword">Incorrect Password</string>
    <string name="logout">Logout</string>
</resources>
