<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stefancouture.accountsmgr.presentation.loginPageActivity">

    <TextView
        android:id="@+id/app_nameBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:paddingTop="80dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold" />

    <TextView android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="200dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/username_text"
        android:layout_alignBottom="@+id/username_text"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp"
        android:inputType="text"
        android:textStyle="bold" />

    <TextView android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/username_text"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="75dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/password_text"
        android:layout_alignBottom="@+id/password_text"
        android:layout_alignStart="@+id/username"
        android:inputType="textPassword"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_loginBtn"
        style="@android:style/Widget.Button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/password_text"
        android:layout_marginStart="80dp"
        android:layout_marginTop="75dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/login_registerBtn"
        style="@android:style/Widget.Button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@id/login_loginBtn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:layout_toEndOf="@id/login_loginBtn"
        android:text="@string/register"
        android:onClick="register"/>
</RelativeLayout>
