<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/firstName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="75dp"
        android:labelFor="@+id/firstName"/>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/firstName_text"
        android:layout_alignBottom="@+id/firstName_text"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="31dp"
        android:inputType="textPersonName"
        android:textStyle="bold" />

    <TextView android:id="@+id/lastName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:layout_below="@+id/firstName_text"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="50dp"
        android:labelFor="@+id/lastName"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/lastName_text"
        android:layout_alignBottom="@+id/lastName_text"
        android:layout_alignStart="@+id/firstName"
        android:inputType="textPersonName"
        android:textStyle="bold" />

    <TextView android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/lastName_text"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="50dp"
        android:labelFor="@+id/email"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/email_text"
        android:layout_alignBottom="@+id/email_text"
        android:layout_alignStart="@+id/lastName"
        android:inputType="textEmailAddress"
        android:textStyle="bold" />

    <TextView android:id="@+id/age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:layout_below="@+id/email_text"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="50dp"
        android:labelFor="@+id/age"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/age_text"
        android:layout_alignBottom="@+id/age_text"
        android:layout_alignStart="@+id/email"
        android:inputType="number"
        android:textStyle="bold" />

    <TextView android:id="@+id/phoneNumber_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:layout_below="@+id/age_text"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingTop="50dp"
        android:labelFor="@+id/phoneNumber"/>

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/phoneNumber_text"
        android:layout_alignBottom="@+id/phoneNumber_text"
        android:layout_alignStart="@+id/age"
        android:inputType="phone"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/register_submitBtn"
        style="@android:style/Widget.Button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/phoneNumber_text"
        android:layout_marginStart="80dp"
        android:layout_marginTop="75dp"
        android:text="@string/submit"/>

    <Button
        android:id="@+id/register_cancelBtn"
        style="@android:style/Widget.Button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@id/register_submitBtn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:layout_toEndOf="@id/register_submitBtn"
        android:text="@string/cancel"
        android:onClick="cancel"/>
</RelativeLayout>